# better-python

./: README.md
PySpark/: PySpark_vs_Pandas.ipynb
algorithmic-challenges/: algorithmic_complexity.ipynb  coderbyte_assessment.ipynb  leetcode_assesments.ipynb  leetcode_practice.ipynb  multiplier_assignment.ipynb  tailorbird_python_sql.ipynb  tic-tac-toe.ipynb
prefect/: pyproject.toml  readme.md  sample-flow.ipynb
python-functions/: README.md  built-in-functions.ipynb  first-class-functions.ipynb  generators.ipynb
python-idioms/: python-idioms.ipynb  readme.md
python-oops/: python-oops.ipynb  readme.md
scraping/: adeptmind-assignment.ipynb  pyproject.toml
