[tool.poetry]
name = "prefect-learning"
version = "0.1.0"
description = ""
authors = ["Abhishek"]

[tool.poetry.dependencies]
python = "^3.10"
prefect = "^2.5.0"
ipykernel = "^6.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
